<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.bngelbooks.ui.InOutHeader.BookSelectedHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookselectedLayout"/>

    <com.example.headerpractice.InOutHeaderLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inoutLayout"/>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smart.refresh.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlTextPulling="@string/srl_header_pulling"
            app:srlTextLoading="@string/srl_header_loading"
            app:srlTextRelease="@string/srl_header_release"
            app:srlTextFinish="@string/srl_header_finish"
            app:srlTextFailed="@string/srl_header_failed"
            app:srlTextUpdate="@string/srl_header_update"
            app:srlTextSecondary="@string/srl_header_secondary"
            app:srlTextRefreshing="@string/srl_header_refreshing"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:id="@+id/recyclerView"/>

        <com.scwang.smart.refresh.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</LinearLayout>